<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/category_mode_title"
        android:key="category_mode_settings">

        <ListPreference
            android:key="background"
            android:title="@string/background_title"
            android:summary="@string/background_summary"
            android:entries="@array/background_entries"
            android:entryValues="@array/background_values"
            android:dialogTitle="@string/background_title"
            android:defaultValue="@string/background_default" />

        <ListPreference
            android:key="colorGamut"
            android:title="@string/colorGamut_title"
            android:summary="@string/colorGamut_summary"
            android:entries="@array/colorGamut_entries"
            android:entryValues="@array/colorGamut_values"
            android:dialogTitle="@string/colorGamut_title"
            android:defaultValue="@string/colorGamut_default" />

        <CheckBoxPreference
            android:key="colorReversed"
            android:title="@string/colorReversed_title"
            android:summary="@string/colorReversed_summary"
            android:defaultValue="false" />

        <CheckBoxPreference
            android:key="dynamicColor"
            android:title="@string/dynamicColor_title"
            android:summary="@string/dynamicColor_summary"
            android:defaultValue="true" />

        <CheckBoxPreference
            android:key="sunspot"
            android:title="@string/sunspot_title"
            android:summary="@string/sunspot_summary"
            android:defaultValue="false" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/category_cheat_title"
        android:key="category_cheat_settings">

        <CheckBoxPreference
            android:key="colorWheel"
            android:title="@string/colorWheel_title"
            android:summary="@string/colorWheel_summary"
            android:defaultValue="false" />

        <!--
        <CheckBoxPreference
            android:key="clockFace"
            android:title="@string/clockFace_title"
            android:summary="@string/clockFace_summary"
            android:defaultValue="false" />
        -->

        <ListPreference
            android:key="clockNumbers"
            android:title="@string/clockNumbers_title"
            android:summary="@string/clockNumbers_summary"
            android:entries="@array/clockNumbers_entries"
            android:entryValues="@array/clockNumbers_values"
            android:dialogTitle="@string/clockNumbers_title"
            android:defaultValue="@string/clockNumbers_default" />

        <CheckBoxPreference
            android:key="clockDashes"
            android:title="@string/clockDashes_title"
            android:summary="@string/clockDashes_summary"
            android:defaultValue="true" />

        <CheckBoxPreference
            android:key="displayTime"
            android:title="@string/displaytime_title"
            android:summary="@string/displaytime_summary"
            android:defaultValue="false" />

        <CheckBoxPreference
            android:key="displayClockHands"
            android:title="@string/displayclockhands_title"
            android:summary="@string/displayclockhands_summary"
            android:defaultValue="false" />

        <ListPreference
            android:key="typeface"
            android:title="@string/typeface_title"
            android:summary="@string/typeface_summary"
            android:entries="@array/typeface_entries"
            android:entryValues="@array/typeface_values"
            android:dialogTitle="@string/typeface_title"
            android:defaultValue="@string/typeface_default" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/category_time_title"
        android:key="category_time_settings">

        <ListPreference
            android:key="timeType"
            android:title="@string/timeType_title"
            android:summary="@string/timeType_summary"
            android:entries="@array/timeType_entries"
            android:entryValues="@array/timeType_values"
            android:dialogTitle="@string/timeType_title"
            android:defaultValue="@string/timeType_default" />

        <CheckBoxPreference
            android:key="rotateTime"
            android:title="@string/rotateTime_title"
            android:summary="@string/rotateTime_summary"
            android:defaultValue="false" />

        <CheckBoxPreference
            android:key="displaySeconds"
            android:title="@string/displayseconds_title"
            android:summary="@string/displayseconds_summary"
            android:defaultValue="false" />

        <CheckBoxPreference
            android:key="baseConversion"
            android:title="@string/baseConversion_title"
            android:summary="@string/baseConversion_summary"
            android:defaultValue="true" />

    </PreferenceCategory>

</PreferenceScreen>